objects/FSCM_Details__c.object
<CustomObject>
    <label>FSCM Detail</label>
    <nameField>
        <displayFormat>FSCM-{00000000}</displayFormat>
        <label>FSCM Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FSCM Detail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>FSCM Detail</relationshipLabel>
        <relationshipName>FSCM_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Value__c</fullName>
        <label>Net Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Doc_Number__c</fullName>
        <label>Doc Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Number__c</fullName>
        <label>Item Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <label>Unit of Measure</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Description__c</fullName>
        <label>Item Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
</CustomObject>